# wp-auto-blog

./: .env.example  .gitignore  README.md  ads.txt  pyproject.toml  requirements.txt  wp-auto-blog-analysis.md  wp-auto-blog-validation.md
.claude/: agents
architecture/: data-model.md  feasibility-auto-blog-pipeline.md  infra-design.md  system-design.md
data/: coupang_prep_links.json  post_registry.json  post_registry_general.json  post_registry_kculture.json  post_registry_tech.json  topic_queue_general.json
finance/: cost-estimate.md
logs/: 2026-01-02.md
product/: mvp-test-strategy.md  prd.md
scripts/: apply_faq_schema.py  apply_money_template_poc.py  audit_broken_posts.py  cleanup_unused_tags.py  concentrate_quality.py  create_coupang_post.py  dump_latest_post.py  fix_nav_menus.py  fix_published_contrast.py  gsc_report.py  insert_coupang_links.py  publish_post.py  retrofit_monetization.py  score_queue.py  setup.sh  setup_indexnow.py  tag_season_topics.py  test.sh  test_kfashion_bytepulse.py  test_kfood_bytepulse.py  test_kpop_bytepulse.py  trendpulse_maintenance.py  verify_yoast_meta.py
src/: __init__.py  config.py  content_generator.py  discount_finder.py  gsc_client.py  image_crawler.py  image_fetcher.py  indexnow.py  keyword_gate.py  main.py  monetization.py  pipeline.py  trend_detector.py  wordpress_client.py  youtube_fetcher.py
tests/: __init__.py  conftest.py  test_config.py  test_content_generator.py  test_image_fetcher.py  test_integration.py  test_internal_links.py  test_main.py  test_trend_detector.py  test_wordpress_client.py  (+1 more)
(+27 files in other folders)
